# miso-games

./: .gitignore  Makefile  README.md  app.cabal  cabal.project
src/: Bench.hs  Bot.hs  Game.hs  Helpers.hs  Main.hs  Model.hs  Spec.hs  Time.hs  Update.hs  View.hs
src/App/: Component.hs  Model.hs  Update.hs  View.hs
src/Bot/: MonteCarlo.hs  MonteCarloBench.hs  MonteCarloTime.hs  Random.hs
src/Breakthrough/: Component.hs  Game.hs  GameBench.hs  GameSpec.hs  GameTime.hs  Model.hs
src/ConnectFour/: Component.hs  Game.hs  GameSpec.hs  Model.hs
src/Helpers/: Board.hs  BoardSpec.hs  Canvas.hs  TimeIt.hs
src/Minesweeper/: Component.hs  Game.hs  GameBench.hs  GameSpec.hs  GameTime.hs  Helpers.hs  Model.hs  Update.hs  View.hs
src/Tictactoe/: Component.hs  Game.hs  GameBench.hs  GameSpec.hs  GameTime.hs  Model.hs
static/: index.html
