cabal-version:    3.0
name:             miso-games
version:          0.1

common options
  if impl(ghcjs) || arch(javascript)
    cpp-options:
      -DGHCJS_BOTH
  if impl(ghcjs)
    cpp-options:
      -DGHCJS_OLD
  elif arch(javascript)
    cpp-options:
      -DGHCJS_NEW
  elif arch(wasm32)
    ghc-options:
      -Wall -O2 -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start" -ddump-splices
    cpp-options:
       -DWASM
  else
    cpp-options:
      -DVANILLA

executable app
  import:
    options
  hs-source-dirs:
    src
  main-is:
    Main.hs
  other-modules:
    Bot.MonteCarlo
    Bot.Random
    Game
    Helpers.Canvas
    App.Component
    App.Model
    Breakthrough.Component
    Breakthrough.Game
    Breakthrough.Model
    Minesweeper.Component
    Minesweeper.Game
    Minesweeper.Model
    Tictactoe.Component
    Tictactoe.Game
    Tictactoe.Model
  build-depends:
    base,
    containers,
    deepseq,
    massiv,
    miso,
    mtl,
    primitive,
    random,
    vector
  default-language:
    GHC2024
  default-extensions:
    CPP TemplateHaskell

test-suite test
  main-is:
    Spec.hs
  hs-source-dirs:
    src
  type:
    exitcode-stdio-1.0
  build-depends:
    base,
    deepseq,
    hspec,
    miso,
    mtl,
    random,
    vector
  other-modules:
    Breakthrough.Game
    Breakthrough.GameSpec
    Game
    Tictactoe.Game
    Tictactoe.GameSpec
  default-language:
    GHC2024
  default-extensions:
    CPP TemplateHaskell
  ghc-options:
    -Wall -O2

executable time
  main-is:
    Time.hs
  hs-source-dirs:
    src
  build-depends:
    base,
    deepseq,
    massiv,
    miso,
    mtl,
    random,
    vector
  other-modules:
    Bot.MonteCarlo
    Bot.MonteCarloTime
    Bot.Random
    Breakthrough.Game
    Breakthrough.GameTime
    Game
    Helpers.TimeIt
    Minesweeper.Game
    Minesweeper.GameTime
    Tictactoe.Game
    Tictactoe.GameTime
  default-language:
    GHC2024
  default-extensions:
    CPP TemplateHaskell
  ghc-options:
    -Wall -O2

benchmark criterion
  type:
    exitcode-stdio-1.0
  main-is:
    Bench.hs
  hs-source-dirs:
    src
  build-depends:
    base,
    criterion,
    deepseq,
    massiv,
    miso,
    mtl,
    random,
    vector
  other-modules:
    Bot.MonteCarlo
    Bot.MonteCarloBench
    Bot.Random
    Breakthrough.Game
    Breakthrough.GameBench
    Game
    Minesweeper.Game
    Minesweeper.GameBench
    Tictactoe.Game
    Tictactoe.GameBench
  default-language:
    GHC2024
  default-extensions:
    CPP TemplateHaskell
  ghc-options:
    -Wall -O2

